# bevy-rapier-determinism-test-

./: Cargo.toml  README.md  android_build.sh
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/name/jinleili/bevy/: BevyActivity.kt  BevySurfaceView.kt  MainActivity.kt  RustBridge.kt
Android/app/src/main/res/values/: themes.xml
src/: android_asset_io.rs  game.rs  lib.rs  main.rs
src/ffi/: android.rs  ios.rs
