[package]
name = "bevy-breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.1"
bevy_rapier2d = { version = "*", features = [
    "enhanced-determinism",
    "serde-serialize",
    "debug-render-2d",
] }
rand = "*"
